// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Switch.component > looks the same 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="animate_grad peer inline-flex shrink-0 cursor-pointer items-center rounded-full bg_grad_accent--outline border-2 border-transparent shadow-xs transition-colors focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background focus-visible:outline-hidden disabled:cursor-not-allowed disabled:opacity-50 h-5 w-9"
    data-state="unchecked"
    dir="ltr"
    role="switch"
    type="button"
    value="on"
  >
    <span
      class="pointer-events-none flex items-center justify-center rounded-full bg-background shadow-lg ring-0 transition-transform h-4 w-4 data-[state=checked]:translate-x-4 data-[state=unchecked]:translate-x-0"
      data-state="unchecked"
    />
  </button>
</DocumentFragment>
`;

exports[`Switch.component > looks the same 2`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="animate_grad peer inline-flex shrink-0 cursor-pointer items-center rounded-full bg_grad_accent--outline border-2 border-transparent shadow-xs transition-colors focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 focus-visible:ring-offset-background focus-visible:outline-hidden disabled:cursor-not-allowed disabled:opacity-50 h-7 w-14"
    data-state="unchecked"
    dir="ltr"
    role="switch"
    type="button"
    value="on"
  >
    <span
      class="pointer-events-none flex items-center justify-center rounded-full bg-background shadow-lg ring-0 transition-transform h-6 w-6 data-[state=checked]:translate-x-7 data-[state=unchecked]:translate-x-0"
      data-state="unchecked"
    />
  </button>
</DocumentFragment>
`;
